Created form for submiting a reservation and main navigation to view

--- a/public/styles.css
+++ b/public/styles.css
@@ -231,6 +231,12 @@ input, select {
 #tasks button {
   color: black; }
 
+select {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  text-indent: 1px;
+  text-overflow: ''; }
+
 /*# sourceMappingURL=styles.css.map */
 
 /*# sourceMappingURL=styles.css.map */
