--- a/public/styles.scss
+++ b/public/styles.scss
@@ -248,5 +248,11 @@ input, select {
   color: black;
 }
 
+select {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    text-indent: 1px;
+    text-overflow: '';
+}
 
 /*# sourceMappingURL=styles.css.map */
