--- a/views/index.ejs
+++ b/views/index.ejs
@@ -28,6 +28,7 @@
     <script type="text/javascript" src="archive.js"></script>
     <script type="text/javascript" src="tasks.js"></script>
     <script type="text/javascript" src="summary.js"></script>
+    <script type="text/javascript" src="reservations.js"></script>
     
     <script type="text/javascript" src="item.js"></script>
     <script type="text/javascript" src="order.js"></script>
