--- a/public/styles.scss
+++ b/public/styles.scss
@@ -13,6 +13,11 @@ $name-input-width: 15em;
     flex-direction: column;
 }
 
+.flex-column-reverse {
+  display: flex;
+  flex-direction: column-reverse;
+}
+
 body {
   display: flex;
   flex-direction: column;
@@ -269,10 +274,6 @@ select {
 
 .reservation-hints {
   width: 6em;
-}
-
-#reservations-control {
-  flex-wrap: wrap;
 }
 
 /*# sourceMappingURL=styles.css.map */
