--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head>
+    <script src="https://cdn.lr-in-prod.com/LogRocket.min.js" crossorigin="anonymous"></script>
+<script>window.LogRocket && window.LogRocket.init('2ts6ff/tea-shop');</script>
         <script src="jquery-3.3.1.min.js"></script>
         <script type="text/javascript" src="localization.js"></script>
 
